31 July 2005 Sylvain Pion
- Regular predicates : add casts to support Uncertain<>.

29 July 2005 Sylvain Pion
- Use object_cast() instead of assign().

8 July 2005 Mariette Yvinec
- added the doc for is_Gabriel() member functions in
  Delaunay and regular triangulations

7 July 2005 Mariette Yvinec
- added  the docs for predicates and constructors on weighted points
  in Regular_triangulation_euclidean_traits

30 June 2005 Mariette Yvinec
- added find_conflicts  and dual functions in Regular triangulation,
  documented but not tested
- added mirror_facet in Triangulation_3 and Triangulation_data_structure_3,
  documented and tested

8 April 2005 Sylvain Pion
- Change "struct K : ... {};" to "typedef ... K;" since it can cause some
  problems (notably with Regular_[filtered]_traits) and we don't want to
  advertise this workaround too much, especially since it may not be needed
  anymore (crossing fingers).

4 April 2005 Sylvain Pion
- Rename R in K in the documentation.
- doc : fix Cell::vertex_index() and Cell::cell_index() to index().

30 March 2005 Sylvain Pion
- Switch IPE pictures to IPE 6, and regenerate PDF and EPS versions.

30 March 2005 Sylvain Pion
- Remove internal Triangulation_ds_{vertex|cell} layer.
- Added mirror_vertex(), mirror_index(), is_valid(Cell_handle),
  is_valid(Vertex_handle) at the TDS and Triangulation level.
- Remove calls to {Vertex|Cell}::init() (deprecated since long).

8 March 2005 Sylvain Pion
- Weighted_converter : allow operators on other kernel objects too.

1 March 2005 Mariette Yvinec
- fixed  operator() for two points in In_smallest_orthogonal_sphere

1 March 2005 Mariette Yvinec
- added operator() for two points in In_smallest_orthogonal_sphere

9 February 2005 Sylvain Pion
- Remove documentation of Triangulation_3 and TDS_3's destructors.

31 January 2005 Sylvain Pion
- Document .point() in TDS::Vertex.

14 January 2005 Sylvain Pion
- Added incident_facets(Vertex_handle).

07 January 2005 Sylvain Pion
- Doc : missing \\
